syntax = "proto3";
import "google/protobuf/wrappers.proto";
package home;
option java_package = "home.nkt.generated.protobuf";
option java_outer_classname = "ResourceIdsDtoProto";

message ResourceIdsDto {
  repeated google.protobuf.Int64Value ids = 1;
}